apps/prod/public/echo/deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: echo
  labels:
    app.kubernetes.io/name: echo
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: echo
      app.kubernetes.io/component: app
  template:
    metadata:
      name: echo
      labels:
        app.kubernetes.io/name: echo
        app.kubernetes.io/component: app
    spec:
      containers:
        - name: echo
          image: jmalloc/echo-server:v0.3.7

          startupProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
            
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
