apps/prod/public/echo/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: echo
  labels:
    app.kubernetes.io/name: echo
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/name: echo
    app.kubernetes.io/component: app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
