apps/prod/public/echo/httproute-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app
  namespace: echo
spec:
  parentRefs:
    - name: http
      namespace: kgateway
  hostnames:
    - "echo.hyvel.eu"
  rules:
    - backendRefs:
        - name: app
          port: 8080
