apps/prod/public/echo/route-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-plain
  namespace: echo
spec:
  parentRefs:
    - name: http
      namespace: kgateway
      sectionName: http
  hostnames:
    - "echo.hyvel.eu"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app
  namespace: echo
spec:
  parentRefs:
    - name: http
      namespace: kgateway
      sectionName: https
  hostnames:
    - "echo.hyvel.eu"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: app
          port: 8080
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=63072000; includeSubDomains; preload"
              - name: X-Frame-Options
                value: "SAMEORIGIN"
              - name: X-Content-Type-Options
                value: "nosniff"
              - name: Referrer-Policy
                value: "strict-origin-when-cross-origin"
              - name: Permissions-Policy
                value: "camera=(), microphone=(), geolocation=()"
            remove: [ "Server" ]
